Removing deprecated in Java 9 (#23)